--- a/ambintes-base/php/.devcontainer/docker-compose.yml
+++ b/ambintes-base/php/.devcontainer/docker-compose.yml
@@ -1,14 +1,17 @@
-version: '3.9'
+version: '3'
 
 services:
   webserver:
     build:
       context: .
       dockerfile: Dockerfile
+      args:
+          PHP_APACHE_VERSION: 8.3
+          XDEBUG_VERSION: 3.3.1
     volumes:
       - ../:/var/www/html/
       - ./config/php.ini:/usr/local/etc/php/conf.d/php.ini
       #- /var/www/html/vendor
       #- /var/www/html/node_modules
     ports:
-      - 8000:80
+      - 8800:80
