--- a/ambintes-base/php/.devcontainer/docker-compose.yml
+++ b/ambintes-base/php/.devcontainer/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       args:
           PHP_APACHE_VERSION: 8.3
           XDEBUG_VERSION: 3.3.1
+          APACHE_PUBLIC_PATH: /var/www/html    
     volumes:
       - ../:/var/www/html/
       - ./config/php.ini:/usr/local/etc/php/conf.d/php.ini
