Incluindo a instalação do NodeJs caso necessário

--- a/ambintes-base/php/.devcontainer/Dockerfile
+++ b/ambintes-base/php/.devcontainer/Dockerfile
@@ -6,9 +6,11 @@ FROM php:${PHP_APACHE_VERSION}-apache
 ARG APACHE_PUBLIC_PATH=/var/www/html
 ENV PUBLIC_PATH=${APACHE_PUBLIC_PATH}
 
-
 # Set the xdebug version
 ARG XDEBUG_VERSION=3.3.1
+
+# Set the nodejs version
+ARG NODEJS_VERSION
 
 # Enable Apache modules
 RUN a2enmod rewrite
@@ -57,5 +59,13 @@ COPY --from=composer:2.6.6 /usr/bin/composer /usr/bin/composer
 # Set the Apache public directory
 RUN sed -ri -e 's!/var/www/html!${PUBLIC_PATH}!g' /etc/apache2/sites-available/*.conf
 RUN sed -ri -e 's!/var/www/html!${PUBLIC_PATH}!g' /etc/apache2/apache2.conf /etc/apache2/conf-available/*.conf
+
+# Install NodeJS
+RUN if [ ! -z "${NODEJS_VERSION}" ]; then \
+        curl -sL https://deb.nodesource.com/setup_${NODEJS_VERSION}.x -o nodesource_setup.sh; \
+        bash nodesource_setup.sh; \
+        apt-get install nodejs -y; \
+        rm nodesource_setup.sh; \
+    fi
 
 WORKDIR /var/www/html
