--- a/ambintes-base/node/.devcontainer/docker-compose.yml
+++ b/ambintes-base/node/.devcontainer/docker-compose.yml
@@ -5,8 +5,10 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+      args:
+          NODEJS_VERSION: 20
     volumes:
       - ../:/home/node/app
       #- /home/node/app/node_modules
     ports:
-      - 3000:3000
+      - 3300:3000
