--- a/bancos/postgresql/docker-compose.yml
+++ b/bancos/postgresql/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   dbserver:
     image: postgres:16.2-alpine3.19
     volumes:
-      - postgresql:/var/lib/postgresql
+      - postgresql_data:/var/lib/postgresql
       - ./imports:/imports
     restart: always
     environment:
@@ -30,4 +30,4 @@ services:
 
 
 volumes:
-  postgresql:
+  postgresql_data:
