Incluindo uma pasta para salvar os dados banco de dados localmente

--- a/bancos/mysql/docker-compose.yml
+++ b/bancos/mysql/docker-compose.yml
@@ -31,3 +31,8 @@ services:
 
 volumes:
   mysql_data:
+    driver: local
+    driver_opts:
+      type: none
+      device: ../../volumes/mysql_data
+      o: bind
