--- a/bancos/postgresql/docker-compose.yml
+++ b/bancos/postgresql/docker-compose.yml
@@ -31,3 +31,8 @@ services:
 
 volumes:
   postgresql_data:
+    driver: local
+    driver_opts:
+      type: none
+      device: ../../volumes/postgresql_data
+      o: bind
