--- a/ambintes-base/php/.devcontainer/docker-compose.yml
+++ b/ambintes-base/php/.devcontainer/docker-compose.yml
@@ -1,19 +1,19 @@
-version: '3'
+version: "3"
 
 services:
-  webserver:
-    build:
-      context: .
-      dockerfile: Dockerfile
-      args:
-          PHP_APACHE_VERSION: 8.3
-          XDEBUG_VERSION: 3.3.1
-          APACHE_PUBLIC_PATH: /var/www/html
-          NODEJS_VERSION: 20
-    volumes:
-      - ../:/var/www/html/
-      - ./config/php.ini:/usr/local/etc/php/conf.d/php.ini
-      #- /var/www/html/vendor
-      #- /var/www/html/node_modules
-    ports:
-      - 8800:80
+    webserver:
+        build:
+            context: .
+            dockerfile: Dockerfile
+            args:
+                PHP_APACHE_VERSION: 8.3
+                XDEBUG_VERSION: 3.3.1
+                APACHE_PUBLIC_PATH: /var/www/html
+                NODEJS_VERSION: 20
+        volumes:
+            - ../:/var/www/html/
+            - ./config/php.ini:/usr/local/etc/php/conf.d/php.ini
+            #- /var/www/html/vendor
+            #- /var/www/html/node_modules
+        ports:
+            - 8800:80
