Ambiente PHP - Ajustando a configuração do hot reload para node

--- a/ambintes-base/php/.devcontainer/docker-compose.yml
+++ b/ambintes-base/php/.devcontainer/docker-compose.yml
@@ -17,3 +17,5 @@ services:
             #- /var/www/html/node_modules
         ports:
             - 8800:80
+        environment:
+            - CHOKIDAR_USEPOLLING=true
