--- a/ambintes-base/php/.devcontainer/config/php.ini
+++ b/ambintes-base/php/.devcontainer/config/php.ini
@@ -1,8 +1,21 @@
-xdebug.mode=debug
-xdebug.log_level=0
-xdebug.start_with_request=yes
-memory_limit=1024M
+[PHP]
+memory_limit=256M
 max_execution_time=300
 post_max_size=64M
 upload_max_filesize=64M
+max_execution_time=120
+max_input_time=120
 date.timezone=America/Sao_Paulo
+
+[opcache]
+opcache.enable=true
+opcache.enable_cli=true
+opcache.jit=tracing
+
+[xdebug]
+xdebug.mode=debug
+xdebug.log_level=0
+xdebug.start_with_request=yes
+
+[intl]
+intl.default_locale=en_utf8
