--- a/ambintes-base/php/.devcontainer/docker-compose.yml
+++ b/ambintes-base/php/.devcontainer/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3"
+version: "3.8"
 
 services:
     webserver:
@@ -6,16 +6,16 @@ services:
             context: .
             dockerfile: Dockerfile
             args:
-                PHP_APACHE_VERSION: 8.3
-                XDEBUG_VERSION: 3.3.1
-                APACHE_PUBLIC_PATH: /var/www/html
-                NODEJS_VERSION: 20
+                APACHE_PUBLIC_PATH: /var/www/html${PROJECT_PATH}${PROJECT_PATH_PUBLIC}
+                PHP_APACHE_VERSION: ${PHP_APACHE_VERSION}
+                XDEBUG_VERSION: ${XDEBUG_VERSION}
+                NODEJS_VERSION: ${NODEJS_VERSION}
         volumes:
-            - ../:/var/www/html/
+            - ../:/var/www/html${PROJECT_PATH}
             - ./config/php.ini:/usr/local/etc/php/conf.d/php.ini
-            #- /var/www/html/vendor
-            #- /var/www/html/node_modules
+            #- /var/www/html${PROJECT_PATH}/vendor
+            #- /var/www/html${PROJECT_PATH}/node_modules
         ports:
-            - 8800:80
+            - ${HOST_PORT}:80
         environment:
             - CHOKIDAR_USEPOLLING=true
