--- a/ambintes-base/php/.editorconfig
+++ b/ambintes-base/php/.editorconfig
@@ -13,9 +13,13 @@ insert_final_newline = false
 
 [*.md]
 indent_size = 2
+trim_trailing_whitespace = false
 
 [*.{yml,yaml}]
 indent_size = 2
+
+[docker-compose.yml]
+indent_size = 4
 
 [*.{xml}]
 indent_size = 2
