Ambiente PHP - Otimizando ambiente para usar um arquivo .env para configurar o devcontainer - incluir arquivo de preferencia o powerlevel10k para o zsh

--- a/ambintes-base/php/.devcontainer/.env
+++ b/ambintes-base/php/.devcontainer/.env
@@ -1,4 +1,6 @@
-# Pasta do projeto apos o caminho do apache /var/www/html/ (opcional)
+# Nome do projeto (Obrigatório)
+PROJECT_NAME="PHP 8.3"
+
 PROJECT_PATH=
 
 # Pasta do projeto publico apos o caminho projeto /var/www/html/${PROJECT_PATH} (opcional)
