--- a/ambintes-base/php/.devcontainer/devcontainer.json
+++ b/ambintes-base/php/.devcontainer/devcontainer.json
@@ -1,7 +1,7 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the
 // README at: https://github.com/devcontainers/templates/tree/main/src/docker-existing-docker-compose
 {
-  "name": "DEV PHP 8.3",
+  "name": "${localEnv:PROJECT_NAME} - DEV",
   "dockerComposeFile": [
     "docker-compose.yml"
   ],
@@ -10,6 +10,10 @@
   "features": {
     "ghcr.io/devcontainers/features/common-utils:2": {},
     "ghcr.io/devcontainers-contrib/features/zsh-plugins:0": {},
+    "ghcr.io/devcontainers-contrib/features/zsh-plugins:0": {
+      "plugins": "git F-Sy-H zsh-autosuggestions zsh-completions",
+      "omzPlugins": "https://github.com/z-shell/F-Sy-H https://github.com/zsh-users/zsh-autosuggestions https://github.com/zsh-users/zsh-completions"
+    },
     "ghcr.io/stuartleeks/dev-container-features/shell-history:0": {}
   },
   "customizations": {
