--- a/ambintes-base/php/.devcontainer/devcontainer.json
+++ b/ambintes-base/php/.devcontainer/devcontainer.json
@@ -1,7 +1,7 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the
 // README at: https://github.com/devcontainers/templates/tree/main/src/docker-existing-docker-compose
 {
-  "name": "${localEnv:PROJECT_NAME} - DEV",
+  "name": "PHP - DEV",
   "dockerComposeFile": [
     "docker-compose.yml"
   ],
@@ -9,7 +9,6 @@
   "workspaceFolder": "/var/www/html${localEnv:PROJECT_PATH}",
   "features": {
     "ghcr.io/devcontainers/features/common-utils:2": {},
-    "ghcr.io/devcontainers-contrib/features/zsh-plugins:0": {},
     "ghcr.io/devcontainers-contrib/features/zsh-plugins:0": {
       "plugins": "git F-Sy-H zsh-autosuggestions zsh-completions",
       "omzPlugins": "https://github.com/z-shell/F-Sy-H https://github.com/zsh-users/zsh-autosuggestions https://github.com/zsh-users/zsh-completions"
@@ -20,8 +19,14 @@
     "vscode": {
       "settings": {},
       "extensions": [
-        "xdebug.php-debug"
+        "xdebug.php-debug",
+        // "mikestead.dotenv",
+        // "amiralizadeh9480.laravel-extra-intellisense",
+        // "ryannaddy.laravel-artisan",
+        // "onecentlin.laravel5-snippets",
+        // "onecentlin.laravel-blade"
       ]
     }
-  }
+  },
+  "postCreateCommand": "/bin/bash ./.devcontainer/postCreateCommand.sh"
 }
