--- a/ambintes-base/php/.vscode/settings.json
+++ b/ambintes-base/php/.vscode/settings.json
@@ -6,6 +6,7 @@
   //* Preferencias pessoais o VSCode
   //! "editor.wordSeparators": "`~!@%^&*()-=+[{]}\\|;:'\",.<>/?",
   "terminal.integrated.fontFamily": "MesloLGS NF",
+  "terminal.integrated.defaultProfile.linux": "zsh",
   "editor.formatOnSave": true,
   "files.autoSave": "afterDelay",
   "explorer.autoReveal": false,
